--- a/OverseasShopping/app/src/main/res/values/strings.xml
+++ b/OverseasShopping/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="profile_credit_card_ccv_placeholder">CCV</string>
     <string name="profile_address_placeholder">Address</string>
     <string name="profile_logout_button">Logout</string>
+    <string name="add_product">New Product</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
