--- a/OverseasShopping/app/src/main/res/values/strings.xml
+++ b/OverseasShopping/app/src/main/res/values/strings.xml
@@ -65,6 +65,9 @@
     <string name="profile_credit_card_ccv_placeholder">CCV</string>
     <string name="profile_address_placeholder">Address</string>
     <string name="profile_logout_button">Logout</string>
+    <string name="profile_confirm_logout">Do you want to logout from the system?</string>
+    <string name="profile_confirm_logout_yes">Yes</string>
+    <string name="profile_confirm_logout_no">No</string>
     <string name="add_product">New Product</string>
     <string name="profile_send_message_button">Send Message</string>
     <!-- TODO: Remove or change this placeholder text -->
