--- a/OverseasShopping/app/src/main/res/values/strings.xml
+++ b/OverseasShopping/app/src/main/res/values/strings.xml
@@ -75,11 +75,17 @@
     <string name="product_error_empty_productname">Please fill in the product"'"s name.</string>
     <string name="product_error_empty_productprice">Please fill in the product"'"s price.</string>
     <string name="product_error_invalid_productprice">Product"'"s price cannot be 0.</string>
+    <string name="product_error_empty_productquantity">Please fill in the available product"'"s quantity.</string>
+    <string name="product_error_invalid_productquantity">Amount of product available cannot be 0.</string>
+    <string name="product_error_empty_productdesc">Please fill in the product"'"s description.</string>
     <string name="purchase_own_product">You cannot purchase your own product.</string>
+    <string name="product_error_invalid_field">There are incomplete or invalid field(s). Please correct the field(s).</string>
+    <string name="product_error_empty_field">There are incomplete field(s). Please fill in the field(s).</string>
+    <string name="product_added_successfully">Your product was added successfully.</string>
     <string name="order_error_invalid_purchasequantity">Purchase quantity cannot be 0 or higher than amount of quantity available</string>
     <string name="order_error_empty_purchasequantity">Please fill in the amount you would like to purchase.</string>
     <string name="order_successful_order">Your order has been placed successfully.</string>
-    <string name ="order_errors_found">You have entered an invalid amount of quantity to purchase. Please correct the amount of quantity to purchase.</string>
+    <string name="order_errors_found">You have entered an invalid amount of quantity to purchase. Please correct the amount of quantity to purchase.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
